# goit-pythonweb-hw-10

./: main.py  pyproject.toml
migrations/: env.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  users.py
